1999-08-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Mousetrap.java, MousetrapObserverSwarm.java,
	MousetrapModelSwarm.java, MousetrapStatistics.java,
	StartMousetrap.java: Do minimal, explicit imports.  Use SwarmImpl
	as argument to activateIn:, not Object.

	* MousetrapModelSwarm.java (MousetrapProbeMap): New inner class.

	* MousetrapObserverSwarm.java, MousetrapModelSwarm.java: Eliminate
	intermediate variables, misc. cleanups.

1999-08-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MousetrapModelSwarm.java, MousetrapBatchSwarm.java,
	MousetrapObserverSwarm.java, Mousetrap.java: Remove this.* ()
	style calls and eliminate most casting.

1999-08-17    <mgd@HELEN>

	* Makefile: Add StartMousetrap.java.

	* StartMousetrap.java, Mousetrap.java: Move StartMousetrap class
	to be public in StartMousetrap.java.

1999-08-12  Alex Lancaster  <alex@santafe.edu>

	* Makefile (clean): Added target.

	* MousetrapBatchSwarm.java, MousetrapModelSwarm.java,
	MousetrapObserverSwarm.java, MousetrapStatistics.java,
	Mousetrap.java: Add Copyright information.

	* COPYING: Add GPL.

1999-08-11  Alex Lancaster  <alex@santafe.edu>

	* MousetrapModelSwarm.java (activateIn()): Create an
	ArchivedProbeDisplay for model ActivityControlImpl.

1999-08-10  Alex Lancaster  <alex@santafe.edu>

	* Mousetrap.java: Changed the following references to classnames
	Mousetrap{Observer,Model,Batch}SwarmImpl ->
	Mousetrap{Observer,Model,Batch}Swarm.

	* Makefile: Likewise.
	
	* MousetrapObserverSwarm.java, MousetrapBatchSwarm.java,
	MousetrapModelSwarm.java: New files, renamed by removing their
	respective `Impl' suffixes.  Changed all class names accordingly,
	throughout.  Removed old files.

1999-08-09  Alex Lancaster  <alex@santafe.edu>

	* MousetrapObserverSwarmImpl.java (buildObjects()): Uncomment code
	to handle ZoomRasterImpl probing.

	* MousetrapBatchSwarmImpl.java: Reformatting throughout.

	* MousetrapObserverSwarmImpl.java (MousetrapObserverSwarmImpl()):